<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnSearchPlayer"
        android:layout_width="191dp"
        android:layout_height="81dp"
        android:background="@drawable/rounded_corner"
        android:ellipsize="none"
        android:enabled="true"
        android:shadowColor="#000000"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:text="@string/search_player_text"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.79" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="387dp"
        android:layout_height="176dp"
        android:textColorHint="@color/black"
        app:hintTextColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/player_name"
            android:layout_width="378dp"
            android:layout_height="103dp"
            android:backgroundTint="#000000"
            android:foregroundTint="@color/black"
            android:hapticFeedbackEnabled="false"
            android:hint="@string/enter_player_name"
            android:singleLine="true"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textColorHighlight="@color/black"
            android:textColorHint="@color/black"
            android:textColorLink="@color/black"
            android:textSize="24sp"
            android:textStyle="italic" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="423dp"
        android:layout_height="81dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="100dp"
        android:fontFamily="casual"
        android:rotation="10"
        android:rotationX="11"
        android:rotationY="11"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>