<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:foregroundTint="#B88C08"
    tools:context=".PlayerActivity">

    <TextView
        android:id="@+id/player_name"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginTop="40dp"
        android:text="@string/placeholder"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.jjoe64.graphview.GraphView
        android:id="@+id/idGraphView"
        android:layout_width="390dp"
        android:layout_height="221dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="204dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.806">

        <LinearLayout
            android:layout_width="161dp"
            android:layout_height="84dp"
            android:background="@drawable/stats_items_rounded_bg"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.064"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.7">

            <TextView
                android:id="@+id/tv_player_games"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/games"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_player_games_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />


        </LinearLayout>

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="161dp"
            android:layout_height="84dp"
            android:background="@drawable/stats_items_rounded_bg"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.064"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.7">

            <TextView
                android:id="@+id/tv_player_winrate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/winrate"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_player_winrate_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0%"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.293">

        <LinearLayout
            android:layout_width="161dp"
            android:layout_height="84dp"
            android:background="@drawable/stats_items_rounded_bg"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.064"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.7">

            <TextView
                android:id="@+id/tv_player_wins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wins"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_player_wins_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />


        </LinearLayout>

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="161dp"
            android:layout_height="84dp"
            android:background="@drawable/stats_items_rounded_bg"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.064"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.7">

            <TextView
                android:id="@+id/tv_player_losses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/losses"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_player_losses_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />


        </LinearLayout>




    </LinearLayout>

    <Button
        android:id="@+id/btnLeaderboardType"
        android:layout_width="85dp"
        android:layout_height="55dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="132dp"
        android:background="@drawable/stats_items_rounded_bg"
        android:text="@string/placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_PlayerRating"
        android:layout_width="85dp"
        android:layout_height="55dp"
        android:textIsSelectable="false"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/stats_items_rounded_bg"
        android:text="@string/placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btnLeaderboardType"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>